# agent-insights

./: .gitignore  .mise.toml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  agent-sources.md  architecture.md  contributing.md  getting-started.md  install.md  release.md  usage.md
packaging/pyinstaller/: agent-insights.py
scripts/: build-release-archive.sh  render-homebrew-cask.py
src/agent_insights/: __init__.py  cli.py  console.py  insights.py
tests/: test_cli_output_contract.py  test_console.py
