[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "agent-insights"
version = "0.1.3"
description = "CLI for generating AI agent session insights reports."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Thomas Nagengast" },
]
dependencies = [
  "rich>=14.0",
]

[project.optional-dependencies]
release = [
  "pyinstaller>=6.11",
]

[project.scripts]
agent-insights = "agent_insights.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_insights"]
