[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "agent-insights"
version = "0.1.4"
description = "CLI for generating AI agent session insights reports."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Thomas Nagengast" },
]
dependencies = [
  "rich>=15.0.0",
]

[project.optional-dependencies]
release = [
  "pyinstaller>=6.21.0",
]

[project.scripts]
agent-insights = "agent_insights.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_insights"]
